# kagamic

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  base_test.c  generate.fish  generate_json.py  json.c  json.h  log.c  log.h  main.c  memory.c  memory.h  string.c  string.h  test_json.c  test_string.c  test_vec.c  testing.h  types.h  vec.c  vec.h
include/: json.h  log.h  memory.h  str.h  types.h  vec.h
src/: json.c  log.c  memory.c  str.c  vec.c
tests/: test_json.c  test_string.c  test_vec.c
